# ocrd_anybaseocr

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  ParserAnybaseocr.py  README.md  README_cropping.md  README_textline.md  README_tiseg.md  anyBaseOCR-gpageseg.py  block_classification.py  ocrd-anybaseocr-parameter.json  ocrd-anybaseocr-textline.py  ocrd-anybaseocr-tiseg.py  ocrd-tool.json  pipeline.py  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
blocks/: test_ploygon.py
blocks/dataset_first_iter/test/: werenfels_basilensis_1692_00009.xml  werenfels_basilensis_1692_00013.xml  werenfels_basilensis_1692_00020.xml  winand_almanach_1604_00044.xml  witzstat_buchszbaum_1540_0018.xml  zinck_autorArcanii_1703_00003.xml
blocks_segmentation/: blocks.py  data.json  data_new.json  data_test.json  inspect_block_data.py
blocks_segmentation/dataset_first_iter/test/: winand_almanach_1604_00009.xml  witzstat_buchszbaum_1540_0018.tif  witzstat_buchszbaum_1540_0021.tif  witzstat_buchszbaum_1540_0021.xml  zinck_autorArcanii_1703_00001.xml  zinck_autorArcanii_1703_00007.xml
docs/: README_binarize.md  README_block_segmentation.md  README_deskew.md  README_dewarp.md  README_textline.md
ocrd_anybaseocr/: anyBaseOCR-gpageseg.py  block_classification.py  constants.py  mets.xml  mets_block.xml  ocrd-tool.json  params.json  tensorflow_importer.py  utils.py
ocrd_anybaseocr/cli/: ParserAnybaseocr.py  anyBaseOCR-gpageseg.py  cli.py  ocrd-tool.json  ocrd_anybaseocr_binarize.py  ocrd_anybaseocr_block_segmentation.py  ocrd_anybaseocr_cropping.py  ocrd_anybaseocr_deskew.py  ocrd_anybaseocr_dewarp.py  ocrd_anybaseocr_layout_analysis.py  ocrd_anybaseocr_textline.py  ocrd_anybaseocr_tiseg.py
ocrd_anybaseocr/models/: README.md
ocrd_anybaseocr/mrcnn/: config.py  model.py  parallel_model.py  utils.py  visualize.py
ocrd_anybaseocr/src/: README_block_classification.md  datagenerator.py  finetune.py  utils.py
src/: datagenerator.py  finetune.py
src/ocrd_anybaseocr/: ocrd-tool.json  tensorflow_importer.py  utils.py
src/ocrd_anybaseocr/cli/: ocrd_anybaseocr_cropping.py  ocrd_anybaseocr_layout_analysis.py
src/ocrd_anybaseocr/models/: mapping_densenet.pickle
src/ocrd_anybaseocr/models/structure_analysis/: fingerprint.pb  keras_metadata.pb
src/ocrd_anybaseocr/models/structure_analysis/variables/: variables.index
src/ocrd_anybaseocr/structure_analysis/variables/: variables.data-00000-of-00002
tests/: base.py  conftest.py  test_crop.py  test_dewarp.py  test_ocrd.py  test_smoke.py
work_dir/: mets.xml
